--- a/frontend/static/md_pages/registering_completions_en.mdx
+++ b/frontend/static/md_pages/registering_completions_en.mdx
@@ -33,7 +33,7 @@ C) be a student at a <a href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and
 
 #### If you are unable to enroll electronically:
 
-Visit the University of Helsinki Admission Services in Helsinki and verify your identity. You can find the instructions for the registration process on the registration and fees page under the heading Registration without a Finnish personal identity code or online banking ID at the University’s Admissions Services.
+Visit the University of Helsinki Admission Services in Helsinki and verify your identity. You can find the instructions for the registration process on the registration and fees page under the heading Registration without a Finnish personal identity code or online banking ID at the University's Admissions Services.
 </Note>
 
 ### Who is eligible to register a completion and receive credits for a mooc.fi course? <a name="eligibility"></a><a name="opintopisteet_tutkintoon"></a>
@@ -48,13 +48,13 @@ C) be a student at a <a href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and
 
 #### If you are unable to enroll electronically:
 
-Visit the University of Helsinki Admission Services in Helsinki and verify your identity. You can find the instructions for the registration process on the registration and fees page under the heading Registration without a Finnish personal identity code or online banking ID at the University’s Admissions Services.
+Visit the University of Helsinki Admission Services in Helsinki and verify your identity. You can find the instructions for the registration process on the registration and fees page under the heading Registration without a Finnish personal identity code or online banking ID at the University's Admissions Services.
 
 ### I need an official transcript of studies, how do I get one? <a name="transcript"></a><a name="opintorekisteriote"></a>
 
 First, be sure enroll on the course through the Open University and register your course completion. See more: [How can I receive credits for mooc.fi course that I completed?](#study_credits). 
 
-Once the credits have been registered, please contact <avoin-student@helsinki.fi> and request for an official transcript of studies. When requesting an official transcript, remember to mention
+Once the credits have been registered, please contact <a href="mailto:avoin-student@helsinki.fi" /> and request for an official transcript of studies. When requesting an official transcript, remember to mention
 
 * the name of the course,
 
