--- a/frontend/static/md_pages/registering_completions_fi.mdx
+++ b/frontend/static/md_pages/registering_completions_fi.mdx
@@ -16,7 +16,7 @@ Opintopisteet saadaksesi sinun tulee ilmoittautua opintojaksolle Avoimen yliopis
 Kurssisuoritusten rekisteröinti onnistuu seuraavia ohjeita seuraten: 
 
 1. Kirjaudu mooc.fi -alustalle seuraavan linkin kautta: [https://www.mooc.fi/fi/profile/completions](https://www.mooc.fi/fi/profile/completions). Käytä kirjautumiseen samaa käyttäjänimeä tai sähköpostiosoitetta, jota olet käyttänyt opintojakson suorittamiseen.
-2. Kun olet kirjautunut sisään, näet listan suoritetuista opintojaksoistasi. Suoritetun opintojakson oikealla puolella on Rekisteröi suoritus –painike.
+2. Kun olet kirjautunut sisään, näet listan suoritetuista opintojaksoistasi. Suoritetun opintojakson oikealla puolella on Rekisteröi suoritus -painike.
 3. Painiketta klikkaamalla siirryt Avoimen yliopiston ilmoittautumisjärjestelmään.
 4. Suorita Avoimen yliopiston ilmoittautuminen. Varmista että syötät Käyttämäsi sähköpostiosoite MOOC-kurssilla -kenttään saman sähköpostiosoitteen kuin sen jolla kirjauduit mooc.fi -alustalle.
 
@@ -28,7 +28,7 @@ Jotta voit saada kurssista opintopisteet, sinun täytyy ensin ilmoittautua kurss
 
 Kun suoritus ja opintopisteet on rekisteröity sinulle, näet suorituksesi tiedot <a href="https://opintopolku.fi/oma-opintopolku/" target="_blank">Oma opintopolku-palvelusta</a>. Omasta opintopolusta voit välittää suoritustietosi omaan korkeakouluusi opintojen hyväksilukua varten. Omaan opintopolkuun kirjaudutaan pankkitunnuksilla.
 
-Mikäli Oma Opintopolkupalvelun tiedot eivät oikeuta suorituksenhyväksilukuun omassa korkeakoulussasi, voit tilata virallisen opintorekisteriotteen osoitteesta <avoin-student@helsinki.fi>. Muista ilmoittaa seuraavat tiedot opintorekisteriotetta tilatessasi:
+Mikäli Oma Opintopolkupalvelun tiedot eivät oikeuta suorituksenhyväksilukuun omassa korkeakoulussasi, voit tilata virallisen opintorekisteriotteen osoitteesta <a href="mailto:avoin-student@helsinki.fi" />. Muista ilmoittaa seuraavat tiedot opintorekisteriotetta tilatessasi:
 
 * Kurssin nimi,
 
