More refactoring from id to slug in register form

--- a/frontend/translations/register/en.json
+++ b/frontend/translations/register/en.json
@@ -21,5 +21,7 @@
   "hoverHint": "Please consent first to sharing your course completion information",
   "leaveTitle": "Leave organization",
   "leaveInformation": "If you leave the organisation, your course completion records will not be sent from Mooc.fi to the organisation anymore.",
-  "leaveButton": "Leave"
+  "leaveButton": "Leave",
+  "organizationDoesntExist": "no such organization exists",
+  "loading": "loading"
 }
