--- a/frontend/translations/register/fi.json
+++ b/frontend/translations/register/fi.json
@@ -21,5 +21,7 @@
   "hoverHint": "Anna ensin suostumuksesi kurssisuoritustietojen jakamiseen",
   "leaveTitle": "Eroa organisaatiosta",
   "leaveInformation": "Jos eroat organisaatiosta, kurssisuoritustietojasi ei enää välitetä Mooc.fi:sta organisaatioon.",
-  "leaveButton": "Eroa"
+  "leaveButton": "Eroa",
+  "organizationDoesntExist": "organisaatiota ei löytynyt",
+  "loading": "ladataan"
 }
