refactor certificate checking; add endpoint to update certificate id

--- a/frontend/translations/completions/en.json
+++ b/frontend/translations/completions/en.json
@@ -9,5 +9,8 @@
     "nameFormCancel":"Cancel",
     "nameFormErrorTitle": "Error",
     "nameFormErrorCheckCertificate": "There was an error checking the certificate. Please try again later.",
-    "nameFormErrorSubmit": "There was an error submitting. Please try again later."
+    "nameFormErrorSubmit": "There was an error submitting. Please try again later.",
+    "eligibleForCertificateButNotGenerated": "User is eligible for certificate but hasn't generated it yet",
+    "certificateGeneratedTitle": "Certificate generated",
+    "certificateGeneratedMessage": "Your certificate was generated successfully! Press 'Show your certificate' to view it."
 }
