--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -36,5 +36,6 @@
     "no": "no",
     "progress": "Progress",
     "totalProgress": "Total progress",
-    "exercisesCompleted": "Exercises completed"
+    "exercisesCompleted": "Exercises completed",
+    "grade": "grade:"
 }
