add HY Ukraine appeal

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -58,5 +58,8 @@
     "partners": "Content from our partners",
     "ukraineText": "Help the victims of the war in Ukraine.",
     "ukraineLink": "https://www.redcross.fi/donate/disaster-relief-fund/",
-    "ukraineLinkText": "Donate to the Finnish Red Cross Disaster Relief Fund"
+    "ukraineLinkText": "Donate to the Finnish Red Cross Disaster Relief Fund",
+    "ukraineHyLink": "https://www.helsinki.fi/en/cooperation/support-us/ukraine-appeal",
+    "ukraineHyText": "Support students and researchers affected by the invasion of Ukraine",
+    "ukraineHyLinkText": "University of Helsinki Ukraine appeal"
 }
