--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -58,6 +58,9 @@
     "partners": "Yhteistyökumppanien sisältöä",
     "ukraineText": "Auta Ukrainan sodasta kärsiviä.",
     "ukraineLink": "https://www.punainenristi.fi/lahjoita/katastrofirahasto/",
-    "ukraineLinkText": "Lahjoita Suomen Punaisen Ristin katastrofirahastoon"
+    "ukraineLinkText": "Lahjoita Suomen Punaisen Ristin katastrofirahastoon",
+    "ukraineHyText": "Helsingin yliopiston Ukraina-keräys",
+    "ukraineHyLink": "https://www.helsinki.fi/fi/yhteistyo/lahjoittajille/ukraina-kerays",
+    "ukraineHyLinkText": "Lahjoita Ukraina-keräykseen opiskelijoiden ja tutkijoiden tueksi"
 }
 
