remove aalto from intro text

--- a/frontend/translations/home/fi.json
+++ b/frontend/translations/home/fi.json
@@ -1,6 +1,6 @@
 {
     "tagLine":"Laadukkaita, avoimia ja ilmaisia verkkokursseja kaikille",
-    "intro": "Helsingin yliopisto ja Aalto-yliopisto tarjoavat laadukkaita, avoimia ja ilmaisia verkkokursseja kaikille. Aloittelija voi lähteä liikkeelle Ohjelmoinnin MOOCista tai tekoälyn perusteisiin keskittyvästä Elements of AI -kurssista. Osaamistaan päivittävä voi syventyä vaikkapa tietoturvaan tai Fullstack -ohjelmointiin.",
+    "intro": "Helsingin yliopiston MOOC-keskus ylläpitää laadukkaita, avoimia ja ilmaisia verkkokursseja kaikille. Aloittelija voi lähteä liikkeelle Ohjelmoinnin MOOCista tai tekoälyn perusteisiin keskittyvästä Elements of AI -kurssista. Osaamistaan päivittävä voi syventyä vaikkapa tietoturvaan tai Fullstack -ohjelmointiin.",
     "courseButton": "Kurssimme",
     "highlightTitle": "Aloita näistä",
     "highlightSubtitle": "Aloittelijoille sopivia kursseja. Ei esitietovaatimuksia.",
