New frontpage WIP (#947)
* new frontpage WIP: hero, news, selected courses

* move things around

* fix emotion plugin issues; move things around; common components

* add WIP hype section

* create new header WIP

* separate some header components into different files

* make typescript happier; some bundle size stuff; scroll to hash

* more eslint recommendations

* image optimization stuff

* add loading skeletons; fix mobile hamburger menu erroring

--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -59,6 +59,7 @@
     "ukraineText": "Auta Ukrainan sodasta kärsiviä.",
     "ukraineLink": "https://www.punainenristi.fi/lahjoita/katastrofirahasto/",
     "ukraineLinkText": "Lahjoita Suomen Punaisen Ristin katastrofirahastoon",
+    "myProfile": "Oma profiili",
     "ukraineHyText": "Helsingin yliopiston Ukraina-keräys",
     "ukraineHyLink": "https://www.helsinki.fi/fi/yhteistyo/lahjoittajille/ukraina-kerays",
     "ukraineHyLinkText": "Lahjoita Ukraina-keräykseen opiskelijoiden ja tutkijoiden tueksi"
