add user search box to user summary; batch frontend graphql

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -62,5 +62,6 @@
     "myProfile": "My profile",
     "ukraineHyLink": "https://www.helsinki.fi/en/cooperation/support-us/ukraine-appeal",
     "ukraineHyText": "Support students and researchers affected by the invasion of Ukraine",
-    "ukraineHyLinkText": "University of Helsinki Ukraine appeal"
+    "ukraineHyLinkText": "University of Helsinki Ukraine appeal",
+    "noResults": "No results"
 }
