--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -62,6 +62,7 @@
     "myProfile": "Oma profiili",
     "ukraineHyText": "Helsingin yliopiston Ukraina-keräys",
     "ukraineHyLink": "https://www.helsinki.fi/fi/yhteistyo/lahjoittajille/ukraina-kerays",
-    "ukraineHyLinkText": "Lahjoita Ukraina-keräykseen opiskelijoiden ja tutkijoiden tueksi"
+    "ukraineHyLinkText": "Lahjoita Ukraina-keräykseen opiskelijoiden ja tutkijoiden tueksi",
+    "noResults": "Ei tuloksia"
 }
 
