--- a/frontend/translations/users/fi.json
+++ b/frontend/translations/users/fi.json
@@ -12,5 +12,7 @@
   "displayedRowsOf": "/",
   "nextPage": "Seuraava sivu",
   "previousPage": "Edellinen sivu",
-  "searchByString": "Etsi merkkijonolla"
+  "searchByString": "Etsi merkkijonolla",
+  "searchInCourses": "Etsi kursseista",
+  "searchUser": "Etsi toista käyttäjää..."
 }
