some template editor edits; filter menu context

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -50,7 +50,7 @@
     "Active": "Active",
     "Upcoming": "Upcoming",
     "Ended": "Ended",
-    "handledBy": "Handled by",
+    "handledBy": "Completions handled by",
     "search": "Search...",
     "reset": "Reset",
     "showAll": "Show all",
