--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -50,7 +50,7 @@
     "Active": "Käynnissä",
     "Upcoming": "Tulossa",
     "Ended": "Loppunut",
-    "handledBy": "Handled by",
+    "handledBy": "Suoritukset käsittelevä kurssi",
     "search": "Etsi...",
     "reset": "Tyhjennä",
     "showAll": "Näytä kaikki",
