--- a/frontend/translations/completions/fi.json
+++ b/frontend/translations/completions/fi.json
@@ -2,7 +2,7 @@
     "createCertificate":"Generoi sertifikaatti",
     "showCertificate": "Näytä sertifikaatti",
     "nameFormTitle":"Tarkista tietosi",
-    "nameFormIntro":"Ennen kuin generoimme seritikaattisi, tarkistathan nimitietosi alta. Jos nimesi ei ole oikein, voit muuttaa sitä alla ja klikata sitten 'lähetä' . Jos nimesi on jo oikein, klikkaa vain 'lähetä' ja generoimme sertifikaattisi sinulle saman tien",
+    "nameFormIntro":"Ennen kuin generoimme sertifikaattisi, tarkistathan nimitietosi alta. Jos nimesi ei ole oikein, voit muuttaa sitä alla ja klikata sitten 'lähetä' . Jos nimesi on jo oikein, klikkaa vain 'lähetä' ja generoimme sertifikaattisi sinulle saman tien",
     "nameFormFirstName":"Etunimi",
     "nameFormLastName":"Sukunimi",
     "nameFormChangeAndSubmit":"Lähetä",
