Add a way to update organization registration email

--- a/frontend/translations/register/en.json
+++ b/frontend/translations/register/en.json
@@ -19,6 +19,10 @@
   "registrationReceived": "Registration received! Verification email was sent to address",
   "incorrectFormat": "Incorrect email address! Please use your organizational email address.",
   "hoverHint": "Please consent first to sharing your course completion information",
+  "memberTitle": "You are already a member in the organization",
+  "updateEmailInformation1": "You have currently registered to the organization with the email address",
+  "updateEmailInformation2": "To update the email address linked to your organization registration, please fill the field below with the new email address and then verify the address via the email you will receive.",
+  "update": "Update",
   "leaveTitle": "Leave organization",
   "leaveInformation": "If you leave the organisation, your course completion records will not be sent from Mooc.fi to the organisation anymore.",
   "leaveButton": "Leave",
