--- a/frontend/translations/register/fi.json
+++ b/frontend/translations/register/fi.json
@@ -19,6 +19,10 @@
   "registrationReceived": "Rekisteröinti vastaanotettu! Vahvistussähköposti lähetetty osoitteeseen",
   "incorrectFormat": "Virheellinen sähköposti! Käytäthän organisaation sähköpostiasi.",
   "hoverHint": "Anna ensin suostumuksesi kurssisuoritustietojen jakamiseen",
+  "memberTitle": "Olet jo jäsen organisaatiossa",
+  "updateEmailInformation1": "Olet tällä hetkellä rekisteröitynyt organisaatioon sähköpostiosoitteella",
+  "updateEmailInformation2": "Päivittääksesi rekisteröintiin yhdistetyn sähköpostiosoitteen, täytä uusi sähköpoistiosoite alla olevaan kenttään. Saat uuteen osoitteeseen vahvistussähköpostin, jolla voit vahvistaa uuden osoitteen.",
+  "update": "Päivitä",
   "leaveTitle": "Eroa organisaatiosta",
   "leaveInformation": "Jos eroat organisaatiosta, kurssisuoritustietojasi ei enää välitetä Mooc.fi:sta organisaatioon.",
   "leaveButton": "Eroa",
