--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -52,6 +52,7 @@
     "Ended": "Ended",
     "handledBy": "Handled by",
     "search": "Search...",
+    "filter": "Filter",
     "reset": "Reset",
     "showAll": "Show all",
     "hideAll": "Hide all",
