--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -39,7 +39,7 @@
     "research3":"advance knowledge and understanding about learning in online learning environments, and",
     "research4":"provide research-based support to other learning material developers and educational researchers, which will lead into a better learning experience for students. ",
     "research5":"This field of research is called learning analytics, and those interested in learning more about it are encouraged to read an article that provides an overview of the area called ",
-    "research6":"Matti Luukkainen from the Agile Education Research group at the Deparment of Computer Science at the University of Helsinki is responsible for the research. You can request the deletion of data related to you at any time by sending an email to mooc@cs.helsinki.fi",
+    "research6":"Petri Ihantola, the director of the MOOC center at the University of Helsinki is responsible for the research. You can request the deletion of data related to you at any time by sending an email to mooc@cs.helsinki.fi",
     "research7":"Data from the learning process is used in this research. The data includes information about learning material usage, course assignment progress and completion, and exam performance. Individual students cannot be identified from the results. Participation is voluntary, and if you do not wish to participate in the research, there are no consequences to you.",
     "researchAgree": "Taking part on the research",
     "researchYes": "I want to participate in the educational research. By choosing this, you help both current and future students.",
