Update LUT-section information

--- a/frontend/static/md_pages/lut_module.mdx
+++ b/frontend/static/md_pages/lut_module.mdx
@@ -16,14 +16,8 @@ LUT-yliopisto tarjoaa ohjelmistotuotannon opintoja joustavina etäopintoina. Opi
 
 <CustomModuleContent>
 
-### Kesällä 2022 LUT-yliopisto tarjoaa intensiiviversiot osasta kursseista. Ilmoittautuminen kesäopintoihin päättyy 8.5.2022.
+### Kevään 2023 LUT-yliopiston ohjelmistotuotannon opintokokonaisuuden kurssilistaus päivitetään tähän syksyn 2023 aikana.
 
-- Software Engineering Models and Modeling (englanniksi)
-- User Interfaces and Usability (englanniksi)
-- Ohjelmistotuotanto
-- Ohjelmistojen laadunhallinta (jatkuva ilmoittautuminen)
-
-Löydät lisätietoa ohjelmistotuotannon opintokokonaisuudesta ja yksittäisistä kursseista, sekä kurssi-ilmoittautumisen <OutboundLink eventLabel="custommodulesite: LUT" to="https://www.lut.fi/ko/opiskelu/avoin-yliopisto/ohjelmistotuotanto">LUTin sivuilta</OutboundLink>.
 </CustomModuleContent>
 
 export default ({ children }) => (
