transparent mooc logo for headers; correct ul/li hierarchy

--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -64,6 +64,8 @@
     "ukraineHyText": "Helsingin yliopiston Ukraina-keräys",
     "ukraineHyLink": "https://www.helsinki.fi/fi/yhteistyo/lahjoittajille/ukraina-kerays",
     "ukraineHyLinkText": "Lahjoita Ukraina-keräykseen opiskelijoiden ja tutkijoiden tueksi",
-    "noResults": "Ei tuloksia"
+    "noResults": "Ei tuloksia",
+    "fi": "Suomeksi",
+    "en": "In English"
 }
 
