--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -64,5 +64,7 @@
     "ukraineHyLink": "https://www.helsinki.fi/en/cooperation/support-us/ukraine-appeal",
     "ukraineHyText": "Support students and researchers affected by the invasion of Ukraine",
     "ukraineHyLinkText": "University of Helsinki Ukraine appeal",
-    "noResults": "No results"
+    "noResults": "No results",
+    "fi": "Suomeksi",
+    "en": "In English"
 }
