frontend major/next images/fonts

--- a/frontend/static/md_pages/lut_module.mdx
+++ b/frontend/static/md_pages/lut_module.mdx
@@ -4,8 +4,8 @@ import OutboundLink from "/components/OutboundLink"
 
 <ContentContainer>
 
-<ModuleHeader>
-  <ModuleImage src="LUT-LOGO-WHITE-PNG.png" alt="LUT"></ModuleImage>
+<ModuleHeader component="div" style={{ height: "30vw" }}>
+  <ModuleImage src="/static/images/LUT-LOGO-WHITE-PNG.png" alt="LUT" sizes="(max-width: 768px): 33vw, (max-width: 600px): 25vw, 50vw"></ModuleImage>
 </ModuleHeader>
 
 <ModuleDescriptionText>
