--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -64,8 +64,9 @@
     "ukraineHyText": "Helsingin yliopiston Ukraina-keräys",
     "ukraineHyLink": "https://www.helsinki.fi/fi/yhteistyo/lahjoittajille/ukraina-kerays",
     "ukraineHyLinkText": "Lahjoita Ukraina-keräykseen opiskelijoiden ja tutkijoiden tueksi",
-    "noResults": "Ei tuloksia",
     "fi": "Suomeksi",
-    "en": "In English"
+    "en": "In English",
+    "selectAll": "Valitse kaikki",
+    "noResults": "Ei tuloksia"
 }
 
