fix invisible tab in course view

--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -18,7 +18,7 @@
   "courseECTS": "Opintopisteet",
   "courseStatus": "Tila",
   "courseOrder": "Järjestys",
-  "courseModuleOrder": "Modulijärjestys",
+  "courseModuleOrder": "Järjestys modulin sisällä",
   "courseProperties": "Ominaisuudet",
   "coursePromote": "Mainosta, ei vaadi esitietoja",
   "courseStartPoint": "Aloitus",
