Add missing translation

--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -65,6 +65,7 @@
     "ukraineHyText": "Support students and researchers affected by the invasion of Ukraine",
     "ukraineHyLinkText": "University of Helsinki Ukraine appeal",
     "noResults": "No results",
+    "selectAll": "Select all",
     "fi": "Suomeksi",
     "en": "In English"
 }
