Remove mention of Java MOOC from English intro

--- a/frontend/translations/home/en.json
+++ b/frontend/translations/home/en.json
@@ -1,6 +1,6 @@
 {
     "tagLine":"High-quality, open and free courses for everyone!",
-    "intro":"The courses are hosted by University of Helsinki MOOC Center. No prior knowledge is required — beginners can start to learn programming basics from the Programming with Java course, or start to get familiar with artificial intelligence from the course Elements of AI.",
+    "intro":"The courses are hosted by University of Helsinki MOOC Center. No prior knowledge is required — beginners can start to learn programming basics from the Introduction to Programming course, or start to get familiar with artificial intelligence from the course Elements of AI.",
     "courseButton": "Our courses",
     "highlightTitle": "Start with these",
     "highlightSubtitle":"Courses for beginners. No prior knowledge required.",
