--- a/frontend/public/md_pages/ohjelmoinnin_aloittaminen_en.mdx
+++ b/frontend/public/md_pages/ohjelmoinnin_aloittaminen_en.mdx
@@ -1,4 +1,4 @@
-import {ContentBox, SectionBox, CodeBox} from "/pages/installation/[id]"
+import {ContentBox, SectionBox, CodeBox, Link} from "/pages/installation/[id]"
 
 <ContentBox>
 
@@ -190,7 +190,7 @@ Please do respond to the surveys, we use the responses to develop out courses.
 
 ### Checking your points <a name="pistetilanteen-tarkistaminen"></a>
 
-You can check your points by logging in to [tmc.mooc.fi](https://tmc.mooc.fi). Use your MOOC.fi account to log in to the service.  
+You can check your points by logging in to <Link href="https://tmc.mooc.fi" target="_blank">tmc.mooc.fi</Link>. Use your MOOC.fi account to log in to the service.  
 
 </SectionBox>
 
