--- a/frontend/public/md_pages/ohjelmoinnin_aloittaminen_vscode_en.mdx
+++ b/frontend/public/md_pages/ohjelmoinnin_aloittaminen_vscode_en.mdx
@@ -1,4 +1,4 @@
-import { ContentBox, CodeBox } from "/pages/installation/[id]"
+import { ContentBox, CodeBox, Link } from "/pages/installation/[id]"
 
 <ContentBox>
 
@@ -161,6 +161,6 @@ When you have sent right solution the the server, you will be given points from 
 
 ### Check your points <a name="check-your-points"></a>
 
-You can check your points by logging in [tmc.mooc.fi](https://tmc.mooc.fi). Use the same user you made earlier.
+You can check your points by logging in <Link href="https://tmc.mooc.fi" target="_blank">tmc.mooc.fi</Link>. Use the same user you made earlier.
 
 </ContentBox>
