--- a/frontend/public/md_pages/registering_completions_fi.mdx
+++ b/frontend/public/md_pages/registering_completions_fi.mdx
@@ -1,4 +1,4 @@
-import {ContentBox, SectionBox, Note} from "/components/Home/FAQ/Common"
+import {ContentBox, SectionBox, Note, Link} from "/components/Home/FAQ/Common"
 import TOC from "./toc_registration_fi.mdx"
 
 <ContentBox>
@@ -26,16 +26,13 @@ Suoritus rekisteröidään sinulle kuuden viikon kuluessa kurssi-ilmoittautumise
 
 Jotta voit saada kurssista opintopisteet, sinun täytyy ensin ilmoittautua kurssille Avoimen yliopiston kautta. Lue lisää: [Kuinka saan opintopisteet mooc.fi -alustalla suorittamastani kurssista?](#opintopisteet) 
 
-Kun suoritus ja opintopisteet on rekisteröity sinulle, näet suorituksesi tiedot <a href="https://opintopolku.fi/oma-opintopolku/" target="_blank">Oma opintopolku-palvelusta</a>. Omasta opintopolusta voit välittää suoritustietosi omaan korkeakouluusi opintojen hyväksilukua varten. Omaan opintopolkuun kirjaudutaan pankkitunnuksilla.
+Kun suoritus ja opintopisteet on rekisteröity sinulle, näet suorituksesi tiedot <Link href="https://opintopolku.fi/oma-opintopolku/" target="_blank">Oma opintopolku-palvelusta</Link>. Omasta opintopolusta voit välittää suoritustietosi omaan korkeakouluusi opintojen hyväksilukua varten. Omaan opintopolkuun kirjaudutaan pankkitunnuksilla.
 
 Mikäli Oma Opintopolkupalvelun tiedot eivät oikeuta suorituksenhyväksilukuun omassa korkeakoulussasi, voit tilata virallisen opintorekisteriotteen osoitteesta <a href="mailto:avoin-student@helsinki.fi" />. Muista ilmoittaa seuraavat tiedot opintorekisteriotetta tilatessasi:
 
 * Kurssin nimi,
-
 * oma nimesi,
-
 * syntymäaikasi, sekä
-
 * kieli jolla haluat otteen.
 
 Ota huomioon, että jokainen korkeakoulu päättää itse toisessa korkeakoulussa suoritettujen opintojen hyväksiluvusta tutkintoon. Hyväksilukua koskevissa kysymyksissäsi ota siis yhteyttä oman korkeakoulusi opintoneuvontaan.
