--- a/frontend/translations/teachers/fi.json
+++ b/frontend/translations/teachers/fi.json
@@ -24,5 +24,5 @@
     "2016Title":"Opetussuunnitelma 2016",
     "2016Text":"Lähivuosina kaikki opettelevat ohjelmointia peruskoulusta asti. Tämä vaatii opettajilta ohjelmointiosaamista. Suosittelemme opettajille opetuksen tueksi erityisesti <a href=\"http://koodiaapinen.fi/\"> Koodiaapista </a>. Koodiaapinen kerää ja tarjoaa opettajille suunnattuja  resursseja, jotka auttavat ohjelmointiopetuksen järjestämisessä. Voit osallistua koodiaapisen luomiseen myös itse.",
     "contactTitle":"Ota yhteyttä",
-    "contactText":"Saat meihin parhaiten yhteyden lähettämällä sähköpostia osoitteeseen <a href=\"https://tmc.mooc.fi/\">mooc@cs.helsinki.fi</a>"
+    "contactText":"Saat meihin parhaiten yhteyden lähettämällä sähköpostia osoitteeseen <a href=\"mailto:mooc@cs.helsinki.fi\">mooc@cs.helsinki.fi</a>"
 }
