--- a/frontend/public/md_pages/registering_completions_en.mdx
+++ b/frontend/public/md_pages/registering_completions_en.mdx
@@ -1,4 +1,4 @@
-import {ContentBox, SectionBox, Note} from "/components/Home/FAQ/Common"
+import {ContentBox, SectionBox, Note, Link} from "/components/Home/FAQ/Common"
 import TOC from "./toc_registration_en.mdx"
 
 <ContentBox>
@@ -20,7 +20,7 @@ You can register your course completions through the following steps*:
 3. Clicking the button takes you to the Open University enrollment system.
 4. Complete Open University course enrollment.
 
-The credits will be registered within six weeks of enrollment. The credits will be added to the University of Helsinki study register. You will be able to view information on your course completions in the national <a href="https://opintopolku.fi/oma-opintopolku/" target="_blank">My Studyinfo</a> service.
+The credits will be registered within six weeks of enrollment. The credits will be added to the University of Helsinki study register. You will be able to view information on your course completions in the national <Link href="https://opintopolku.fi/oma-opintopolku/" target="_blank">My Studyinfo</Link> service.
 
 <Note>
 * To electronically register a completion and receive credits, you will have to 
@@ -29,7 +29,7 @@ A) have a Finnish personal identity number (format: xxxxxxxx-xxxx), or
 
 B) be an exchange student at the University of Helsinki, or 
 
-C) be a student at a <a href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners" target="_blank">HAKA member institution</a>.
+C) be a student at a <Link href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners" target="_blank">HAKA member institution</Link>.
 
 #### If you are unable to enroll electronically:
 
@@ -44,7 +44,7 @@ A) have a Finnish personal identity number (format: xxxxxxxx-xxxx), or
 
 B) be an exchange student at the University of Helsinki, or 
 
-C) be a student at a <a href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners" target="_blank">HAKA member institution</a>.
+C) be a student at a <Link href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners" target="_blank">HAKA member institution</Link>.
 
 #### If you are unable to enroll electronically:
 
