--- a/frontend/translations/teachers/en.json
+++ b/frontend/translations/teachers/en.json
@@ -24,5 +24,5 @@
     "2016Title":"",
     "2016Text":"",
     "contactTitle":"Keep in touch",
-    "contactText":"You can best reach us by email at <a href=\"https://tmc.mooc.fi/\">mooc@cs.helsinki.fi</a>"
+    "contactText":"You can best reach us by email at <a href=\"mailto:mooc@cs.helsinki.fi/\">mooc@cs.helsinki.fi</a>"
 }
