Sort and color course cards based on study modules

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -67,5 +67,7 @@
     "fi": "Suomeksi",
     "en": "In English",
     "selectAll": "Select all",
+    "unscheduled": "Indefinitely open",
+    "showCourse": "Show course",
     "noResults": "No results"
 }
