--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -66,6 +66,8 @@
     "ukraineHyLinkText": "University of Helsinki Ukraine appeal",
     "noResults": "No results",
     "selectAll": "Select all",
+    "unscheduled": "Indefinitely open",
+    "showCourse": "Show course",
     "fi": "Suomeksi",
     "en": "In English"
 }
