fix mdx pages; small changes here and there

--- a/frontend/public/md_pages/netbeans_installation_Windows_fi.mdx
+++ b/frontend/public/md_pages/netbeans_installation_Windows_fi.mdx
@@ -1,4 +1,4 @@
-import {ContentBox, Link} from "/pages/installation/[id]"
+import {ContentBox, Link, CodeBox} from "/pages/installation/[id]"
 
 <ContentBox>
 
