--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -45,6 +45,7 @@
   "courseAddTranslation": "Lisää käännös",
   "courseVariants": "Kurssivariantit",
   "courseAliases": "Kurssialiakset",
+  "courseTags": "Kurssitunnisteet",
   "courseAliasCourseCode": "Kurssikoodi",
   "confirmationRemoveVariant": "Haluatko poistaa tämän kurssivariantin?",
   "confirmationRemoveAlias": "Haluatko poistaa tämän kurssialiaksen?",
