Add a tooltip to the estimated workload

--- a/frontend/translations/_new/courses/en.json
+++ b/frontend/translations/_new/courses/en.json
@@ -3,5 +3,5 @@
   "heroSectionDescription1": "Suorita yksittäisiä kursseja",
   "heroSectionDescription2": "Opintokokonaisuuksien suorittaminen",
   "heroSectionDescription3": "Hae suoritusmerkinnät opintoihisi",
-  "coursesHeader": "Kaikki kurssit"
+  "coursesHeader": "All courses"
 }
