--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -69,5 +69,7 @@
     "selectAll": "Select all",
     "unscheduled": "Indefinitely open",
     "showCourse": "Show course",
+    "ectsHoursExplanation1": "The estimated workload of the course, which is estimated based on the ECTS received from the course. The course awards",
+    "ectsHoursExplanation2": "ECTS. At the University of Helsinki, one ECTS requires approximately 27 hours of work.",
     "noResults": "No results"
 }
